@@ -1,3 +1,8 @@
-version 0.0.1 - May 10, 2009
-* Test Release
+2009-11-28
+
+    * fix: modules.mk
+
+2009-5-10  [Version 0.0.1 released]
+
+    * Test Release
 
